# rust-toy-website

./: .editorconfig  .gitignore  Cargo.toml  README.md  sqlite3_create.sh
src/: config.rs  main.rs
src/api_handlers/: login.rs  signup.rs
src/common/: password.rs  string.rs  structs.rs
src/models/: user.rs
