[package]
name = "rust-toy-website"
version = "0.1.0"
authors = ["Simon Lim Hao Wooi <zybler@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "3.0.0-beta.1"
actix-rt = "1.1.1"
serde = { version = "1.0.115", features = ["derive"] }
rust-scrypt = "1.3.0"
hex = "0.4.2"
bincode = "1.3.1"
rand = "0.7.3"
regex = "1.3.9"
rusqlite = "0.23.1"
r2d2 = "0.8.9"
r2d2_sqlite = "0.16.0"
random-b64-str = { git = "https://github.com/azybler/random-b64-str" }
